<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.games.nataly.smileorfrown.SettingsActivity"
    android:background="#ffffffff">


    <TextView android:text="@string/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_t"
        android:textSize="@dimen/menu_title_text"
        android:textColor="#f4000238"
        android:layout_margin="@dimen/menu_title_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_vibrate"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_t"
        android:text="@string/vibrate_button_on"
        android:background="@drawable/button_color"
        android:textColor="#f4000238"
        android:textSize="@dimen/menu_small_button_text"
        android:padding="@dimen/menu_button_padding" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_sound"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_vibrate"
        android:text="@string/sound_button_on"
        android:background="@drawable/button_color"
        android:textColor="#f4000238"
        android:textSize="@dimen/menu_small_button_text"
        android:padding="@dimen/menu_button_padding"
        android:visibility="visible" />

    <!-- reset high score -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_reset"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_sound"
        android:text="@string/reset_score_button"
        android:background="@drawable/button_color"
        android:textColor="#f4000238"
        android:textSize="@dimen/menu_small_button_text"
        android:padding="@dimen/menu_button_padding"
        android:visibility="visible" />

    <!-- back to main -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_reset"
        android:text="@string/back_button"
        android:background="@drawable/button_color"
        android:textColor="#f4000238"
        android:textSize="@dimen/menu_small_button_text"
        android:padding="@dimen/menu_button_padding" />

</RelativeLayout>
